# ecgvis

./: .gitignore  README.md  main.py  setup.cfg
ecgvis/: App.py  Constants.py  CustomVisuals.py  CustomWidgets.py  Forms.py  Models.py  Panels.py  Viewers.py  Views.py  __init__.py  resources.py  resources.qrc
