[metadata]
name = ecgvis
version = 0.0.1
author = Santiago F. Caracciolo
author_email = scaracciolo@conicet.gov.ar
description = A desktop application to visualize ECG data both temporal and spatially over geometries.
url = https://github.com/sfcaracciolo/ecgvis.git

[options]
packages = find:
install_requires =
   numpy <= 1.20.3
   PySide6
   zarr
   vispy
   QtRangeSlider